<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.GetStartedActivity">

       <androidx.appcompat.widget.AppCompatImageView
           android:id="@+id/ivStartedImage"
           android:layout_width="match_parent"
           android:layout_height="280dp"
           android:src="@drawable/logo_started"
           android:layout_marginTop="100dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvWelcomeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivStartedImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:fontFamily="@font/gotham_medium"
        android:text="@string/lbl_welcome"
        android:textColor="@color/white"
        android:textSize="@dimen/text_heading_1x" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvGreetLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvWelcomeLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_medium"
        android:fontFamily="@font/gotham_light"
        android:textStyle="bold"
        android:text="@string/lbl_greet_one"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGetStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_xxlarge"
        android:background="@drawable/background_transparent_button"
        android:paddingTop="@dimen/margin_medium_3"
        android:paddingBottom="@dimen/margin_medium_3"
        android:text="@string/lbl_get_started"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/gotham_medium"
        android:textSize="@dimen/text_regular_2x" />

</RelativeLayout>