<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SnacksActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBarSnackScreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSnackList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtTextPromoCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rvSnackList"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:background="@drawable/edit_text_modified_states"
                android:fontFamily="@font/gotham_light"
                android:hint="@string/lbl_enter_promo_code"
                android:paddingTop="@dimen/margin_medium_2"
                android:paddingBottom="@dimen/margin_card_medium_2"
                android:textColorHint="@color/colorPrimaryTextLight"
                android:textCursorDrawable="@drawable/cursor_drawable"
                android:textStyle="italic|bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNoPromoLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtTextPromoCode"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium"
                android:fontFamily="@font/gotham_light"
                android:text="@string/lbl_no_promo_code"
                android:textColor="@color/colorPrimaryTextLight"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvGetNowLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtTextPromoCode"
                android:layout_marginStart="@dimen/margin_card_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_toEndOf="@id/tvNoPromoLabel"
                android:fontFamily="@font/gotham_light"
                android:text="@string/lbl_get_now"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSubTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvNoPromoLabel"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_large"
                android:fontFamily="@font/gotham_light"
                android:text="@string/lbl_sub_total"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_regular_2x"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPayMethodLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvSubTotal"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:fontFamily="@font/gotham_medium"
                android:text="@string/lbl_payment_method"
                android:textColor="@color/black"
                android:textSize="@dimen/text_regular_4x" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPaymentMethodList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvPayMethodLabel"
                android:layout_marginTop="@dimen/margin_large"
                android:paddingBottom="150dp" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_marginEnd="@dimen/margin_medium_2"
            android:layout_marginBottom="@dimen/margin_xlarge"
            android:background="@drawable/valid_button_background"
            android:elevation="@dimen/margin_large"
            android:fontFamily="@font/gotham_medium"
            android:paddingTop="@dimen/margin_medium_3"
            android:paddingBottom="@dimen/margin_medium_3"
            android:shadowColor="@null"
            android:text="@string/lbl_pay_amount"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_regular_2x" />

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>